deployment/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc-01
  namespace: networking
spec:
  type: ExternalName
  externalName: api-svc-01.main.svc.cluster.local
