deployment/apps.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    namespace: main
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-svc-01
            port:
              number: 80
  - host: test.localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc-01
            port:
              number: 80
