deployment/ingress_blue_green.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: networking
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
       paths:
       - backend:
          service:
            name: api-svc-01
            port:
               number: 8080
         path: /
         pathType: Prefix
  - host: test.localhost
    http:
       paths:
       - backend:
          service:
            name: api-svc-02
            port:
               number: 8080
         path: /
         pathType: Prefix
